# tg_smn

./: .gitignore  COLAB_WORKFLOW.md  Claude.md  Learning_Causal_Relationships_v2.ipynb  README.md  Run_PixelWorldModel_Experiments.ipynb  Run_StochMuZeroHarness_Benchmarks (2).ipynb  Run_StochMuZeroHarness_Benchmarks.ipynb  TG_SMN_Run.ipynb  VQ_WorldModel_RuleExtraction.ipynb  colab_setup.sh  eval.py  pyproject.toml  requirements.txt  stochastic_muzero_colab.ipynb  stochastic_muzero_colab_v2.ipynb  train.py
_deprecated/: Learning_Causal_Relationships_v2.ipynb  Run_PixelWorldModel_Experiments.ipynb  ale_rssm_causal_stochastic.py
config/: default.yaml  game_2048.yaml  game_breakout.yaml  game_pong.yaml  game_spaceinvaders.yaml
games/: __init__.py  base.py  game_2048.py  game_atari.py  game_chess.py  game_tictactoe.py
mcts/: __init__.py  macro_cache.py  node.py  tree_search.py
networks/: __init__.py  dynamics.py  encoder.py  muzero_network.py  prediction.py  representation.py
notebooks/: TG_SMN_Run.ipynb
tg_smn/: __init__.py  analysis.py  bootstrap.py  config.py  sweep.py  tokenization.py  utils.py
tg_smn/controllers/: __init__.py  fixed.py  learned.py
tg_smn/envs/: __init__.py  base.py  multidomain.py  wt2.py
tg_smn/models/: __init__.py  transformer_lm.py
tg_smn/train/: __init__.py  lm_trainer.py  replay.py
training/: __init__.py  replay_buffer.py  self_play.py  trainer.py
utils/: __init__.py  config.py  support.py
world_models/: README.md  __init__.py
world_models/grid/: __init__.py  game_2048.py  othello.py  renderer.py
(+33 files in other folders)
