[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-smn"
version = "0.1.2"
description = "Thermodynamically-governed Sparse Memory Networks (TG-SMN) experiments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "TG-SMN"}]

# NOTE: torch is intentionally not pinned here because Colab already provides it.
# Install deps in notebook with pip as needed.
dependencies = [
  "datasets>=2.14",
  "numpy>=1.23",
  "pandas>=2.0",
  "tqdm>=4.66",
  "matplotlib>=3.7"
]

[tool.setuptools]
packages = ["tg_smn", "tg_smn.envs", "tg_smn.models", "tg_smn.controllers", "tg_smn.train"]
